--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.5",
+    "@apollo/client": "latest",
+    "@apollo/experimental-nextjs-app-support": "^0.8.0",
     "graphql": "^16.8.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "typescript": "^5",
